--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ceramicnetwork/3id-did-resolver": "^1.4.16",
+    "@ceramicnetwork/http-client": "^1.5.7",
+    "@stablelib/random": "^1.0.1",
+    "@toruslabs/torus-embed": "^1.21.0",
+    "dids": "^2.4.3",
+    "ethers": "^5.6.1",
+    "key-did-provider-ed25519": "^1.1.0",
+    "key-did-resolver": "^1.4.4",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "web3modal": "^1.9.5"
   },
   "devDependencies": {
     "@types/node": "17.0.22",
